--- a/MVCLabb/MVCLabb/MVCLabb.csproj
+++ b/MVCLabb/MVCLabb/MVCLabb.csproj
@@ -186,6 +186,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Image\Skimboard.jpg" />
+    <Content Include="Image\SkimboardThree.jpg" />
+    <Content Include="Image\SunsetSurf.jpg" />
+    <Content Include="Image\surf.jpg" />
+    <Content Include="Image\Water.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
