added a view for uploadPicture

--- a/MVCLabb/MVCLabb/MVCLabb.csproj
+++ b/MVCLabb/MVCLabb/MVCLabb.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Gallery\Gallery.cshtml" />
     <Content Include="Views\Gallery\ShowImage.cshtml" />
     <Content Include="Views\ErrorPage\Error.cshtml" />
+    <Content Include="Views\Gallery\UploadPicture.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
