--- a/MVCLabb/MVCLabb/MVCLabb.csproj
+++ b/MVCLabb/MVCLabb/MVCLabb.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Photo.cs" />
+    <Compile Include="Models\ViewAlbumPhoto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -256,6 +257,7 @@
     <Content Include="Views\Gallery\AddComment.cshtml" />
     <Content Include="Views\Album\Index.cshtml" />
     <Content Include="Views\Album\CreateAlbum.cshtml" />
+    <Content Include="Views\Album\AddPhotoToAlbum.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
