--- a/MVCLabb/MVCLabb/MVCLabb.csproj
+++ b/MVCLabb/MVCLabb/MVCLabb.csproj
@@ -259,6 +259,7 @@
     <Content Include="Views\Album\CreateAlbum.cshtml" />
     <Content Include="Views\Album\AddPhotoToAlbum.cshtml" />
     <Content Include="Views\Album\Details.cshtml" />
+    <Content Include="Views\Album\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
