--- a/MVCLabb/MVCLabb/MVCLabb.csproj
+++ b/MVCLabb/MVCLabb/MVCLabb.csproj
@@ -191,12 +191,14 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\jquery.growl.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Image\Skimboard.jpg" />
     <Content Include="Image\SkimboardThree.jpg" />
+    <Content Include="Image\SpinnerImage\ajax-loader.gif" />
     <Content Include="Image\SunsetSurf.jpg" />
     <Content Include="Image\surf.jpg" />
     <Content Include="Image\Water.jpg" />
@@ -211,6 +213,7 @@
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.growl.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
