--- a/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
+++ b/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
@@ -118,6 +118,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Image\Skimboard.jpg" />
+    <Content Include="Image\SkimboardThree.jpg" />
+    <Content Include="Image\SpinnerImage\ajax-loader.gif" />
+    <Content Include="Image\SunsetSurf.jpg" />
+    <Content Include="Image\surf.jpg" />
+    <Content Include="Image\Water.jpg" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Web.config" />
