--- a/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
+++ b/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
@@ -143,9 +143,12 @@
     <Content Include="scripts\jquery.validate.js" />
     <Content Include="scripts\jquery.validate.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
+    <Content Include="scripts\MyMain.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Gallery\Index.cshtml" />
     <Content Include="Views\Gallery\AddComment.cshtml" />
+    <Content Include="Views\Gallery\ShowImage.cshtml" />
+    <Content Include="Views\Gallery\UploadPicture.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
