Testing the album

--- a/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
+++ b/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
@@ -149,11 +149,13 @@
     <Content Include="Views\Gallery\AddComment.cshtml" />
     <Content Include="Views\Gallery\ShowImage.cshtml" />
     <Content Include="Views\Gallery\UploadPicture.cshtml" />
+    <Content Include="Views\Album\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Administration\AdministrationAreaRegistration.cs" />
     <Compile Include="Areas\Administration\Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AlbumController.cs" />
     <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
