--- a/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
+++ b/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
@@ -150,6 +150,9 @@
     <Content Include="Views\Gallery\ShowImage.cshtml" />
     <Content Include="Views\Gallery\UploadPicture.cshtml" />
     <Content Include="Views\Album\Index.cshtml" />
+    <Content Include="Views\Album\AddComment.cshtml" />
+    <Content Include="Views\Album\ShowAlbum.cshtml" />
+    <Content Include="Views\Album\AddPhotoToAlbum.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
