--- a/TestningavDatabas/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
+++ b/TestningavDatabas/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
@@ -196,6 +196,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="scripts\jquery-3.1.1.min.map" />
+    <Content Include="Views\Album\AddNewAlbum.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
