--- a/TestningavDatabas/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
+++ b/TestningavDatabas/MVCLabb/MVCLabbAjax/MVCLabbAjax.csproj
@@ -197,6 +197,8 @@
     <Content Include="scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="scripts\jquery-3.1.1.min.map" />
     <Content Include="Views\Album\AddNewAlbum.cshtml" />
+    <Content Include="Views\Album\IndexPartial.cshtml" />
+    <Content Include="Views\Gallery\IndexPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
